bugfix (webkit only) : overflow of reference field don't break layout

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,6 +37,11 @@ body {
 
     table {background-color: #fff; box-shadow : 0 4px 23px 5px rgba(0, 0, 0, 0.2), 0 2px 6px rgba(0,0,0,0.15);}
     
+    td:first-child code {
+        max-width: 400px;
+        word-wrap:break-word;
+    }
+    
     .flipswitch {white-space: nowrap; }
     .flipswitch .flipswitch-btn-no {background-color: #6D7779;}
     .flipswitch .flipswitch-btn-yes {background-color: #C3BEBB;}
